--- a/projet_web/page_compare/compare_style.css
+++ b/projet_web/page_compare/compare_style.css
@@ -1,5 +1,74 @@
-
-
 body {
-    background-color:  rgb(52, 109, 223);
+    background-color: rgb(48, 48, 48);
+    font-family: 'Audiowide', cursive;
+}
+
+header {
+    position: sticky;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
+    background-color: black;
+    display: flex;
+    justify-content: flex-start;
+    
+}
+
+#elem_header {
+    display: flex;
+    justify-content: center;
+}
+/*
+font-family: 'Audiowide', cursive;
+font-family: 'Fira Mono', monospace;
+*/
+header h3 {
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-top: 5px;
+}
+
+.header_text {
+    color: #9146FF;
+    font-family: 'Catamaran', sans-serif;
+    text-decoration:none;
+}
+
+header img {
+   max-height: 80px ;
+   max-width: 140px;
+   margin-right: 37%;
+}
+
+footer {
+    color: #9146FF;
+    font-size: 20px;
+    background-color: black;
+    margin-left: -7px;
+    margin-right: -6px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+footer img {
+    max-width: 150px;
+}
+
+footer a {
+    text-decoration:none;
+    color: #9146FF;
+}
+
+#illustration {
+    max-width: 95%;
+    margin-left: -20px;
+}
+
+#streamers {
+    font-family: 'Catamaran', sans-serif;
 }
