--- a/projet_web/page_compare/compare_style.css
+++ b/projet_web/page_compare/compare_style.css
@@ -72,3 +72,85 @@ footer a {
 #streamers {
     font-family: 'Catamaran', sans-serif;
 }
+
+.data {
+    background-color: black;
+    display: flex;
+    justify-content: space-around;
+    flex: 1 1 0;
+    color: #9146FF;
+    border-radius: 10px;
+}
+
+.information {
+    display: flex;
+    margin :20px;
+}
+
+.name_checkbox {
+    background-color: black;
+    color: #9146FF;
+    width: 6%;
+    height: 6%;
+    margin: 10px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.data div {
+    margin: 5px ;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*
+    border-left-style: solid;
+    border-right-style: solid;
+    border-color: grey;
+    */
+}
+
+.data div h6 {
+    font-family: 'Catamaran', sans-serif;
+    font-size: 20px;
+    text-decoration: underline;
+    margin-top: -10px;
+    margin-bottom: -10px;
+}
+
+
+#text {
+    background-color: black;
+    margin-top: -5px;
+    margin-left: -6px;
+    margin-right: -6px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#text_desc {
+    color: #9146FF;
+    padding-left: 5%;
+    padding-bottom: 10px;
+}
+
+#retour {
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    margin: 15px;
+}
+
+#retour a {
+    background-color: black;
+    padding: 10px;
+    font-size: 20px;
+    text-decoration: none;
+    border-radius: 6px;
+    color: #9146FF;
+}
+
+#name_checkbox p {
+    text-decoration: none;
+    color: #9146FF;
+}
